--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,13 +13,13 @@ body {
     box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
 }
 
-.weather-city {
+.city {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-style: normal;
 }
 
-.roboto-black {
+.temperature {
     font-family: "Roboto", sans-serif;
     font-weight: 900;
     font-style: normal;
