--- a/CSS/style.css
+++ b/CSS/style.css
@@ -18,17 +18,30 @@ body {
     font-weight: 700;
     font-style: normal;
 }
+.icon {width: 88px;
+    height: 88px;
+}
+.weather-app-container{
+display: flex;
+justify-content: end;
+position: relative;
+top:-88px;
+    
+}
+
+
 
 .temperature {
     font-family: "Roboto", sans-serif;
-    font-weight: 900;
+    
     font-style: normal;
-    display: flex;
-    justify-content: end;
-    font-size: 45px;
-    position: relative;
-    top: -88px;
+    line-height: 88px;
+    margin-left: 10px;
+    font-size: 58px;
+    font-weight: bold;
 }
+
+
 
 .humidity {
     font-weight: bold;
