--- a/CSS/style.css
+++ b/CSS/style.css
@@ -97,8 +97,10 @@ main .current-weather {
     line-height:20px;
 }
 .weather-forecast-icon{
-    font-size:22px;
-    text-align:center;
+    width:88px;
+    height:88px;
+    display:block;
+    margin: 0 auto;
 }
 .weather-forecast-temperatures{
     text-align: center;
