--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@ body {
 
 .wrap {
     background: white;
-    max-width: 600px;
+    max-width: 100%;
     margin: 60px auto;
     padding: 30px;
     border-radius: 10px;
