--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,8 @@ body {
 .wrap {
   background: white;
   max-width: 600px;
+  width: 100%;
+  box-sizing: border-box;
   margin: 45px auto;
   padding: 30px;
   border-radius: 10px;
@@ -20,6 +22,7 @@ body {
 .icon {
   width: 88px;
   height: 88px;
+  max-width: 100%;
 }
 .weather-app-container {
   display: flex;
@@ -83,6 +86,7 @@ main .current-weather {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
+  flex-wrap: wrap;
 }
 .weather-forecast-date {
   text-align: center;
