--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,6 +22,8 @@ body {
 .icon {
   width: 88px;
   height: 88px;
+  display: block;
+  margin: 0 auto;
 }
 .weather-app-container {
   display: flex;
